<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dip" >

    <ImageView
        android:id="@+id/blur_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="-30dip"
        android:layout_marginRight="-30dip"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:background="@drawable/profile_header_bg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:layout_gravity="center" >

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="13dip"
            android:layout_marginLeft="10dip"
            android:src="@drawable/avatar" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_alignTop="@id/user_avatar"
            android:layout_toRightOf="@id/user_avatar"
            android:shadowColor="#FF888888"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:singleLine="true"
            android:textColor="#FFFFFFFF"
            android:textSize="19sp"
            android:textStyle="bold" 
            />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dip"
            android:layout_toRightOf="@id/user_avatar"
            android:singleLine="true"
            android:textColor="@color/theme_color"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/location"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dip"
            android:layout_toRightOf="@id/user_avatar"
            android:maxLines="4"
            android:shadowColor="#FF888888"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textColor="#FFFFFFFF"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#70333333"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="5dip" >

            <LinearLayout
                android:id="@+id/follower_lay"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_follower"
                    android:textColor="#FFFFFFFF"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/follower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="#FFFFFFFF"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/following_lay"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_following"
                    android:textColor="#FFFFFFFF"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="#FFFFFFFF"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/weibo_lay"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_weibo"
                    android:textColor="#FFFFFFFF"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/weibo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="#FFFFFFFF"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/favourit_lay"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_favourit"
                    android:textColor="#FFFFFFFF"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/favourit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="#FFFFFFFF"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>